# stone-soup

./: README.md  contents.json  indices.json  main.py  main_pg_num.py  output.json  pyproject.toml  raw_text.json  read_indices.py  read_stories.py  read_table_of_content.py  stories.json  tags_book_2.csv  txt_to_json.py
files/: contents.txt  indices.txt  output.txt  parsed_indices.txt  processed_stories_copy.txt  raw_text.txt  scratch.txt  stories.txt  table_of_content.txt
